# cbio-nav-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
prompts/: system_prompt.txt
src/cbio_nav_agent/: __init__.py  agent.py  api.py  mcp_client.py  openai_adapter.py  settings.py
